--- a/src/main/resources/ui/MenuRelatorios.fxml
+++ b/src/main/resources/ui/MenuRelatorios.fxml
@@ -5,68 +5,68 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.MenuRelatoriosController">
-   <left>
-      <VBox prefWidth="320.0" style="-fx-background-color: #2C2C2C;" BorderPane.alignment="CENTER">
-         <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-padding: 20;">
-            <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/salvar.png" />
-            </ImageView>
-            <Text fill="#9c27b0" strokeType="OUTSIDE" strokeWidth="0.0" text="Relatórios">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Text>
-         </HBox>
-         <Separator />
-         
-         <VBox spacing="10" VBox.vgrow="ALWAYS">
-            <padding>
-               <Insets top="60" left="8" right="8" />
-            </padding>
-            
-            <HBox spacing="10" alignment="CENTER_LEFT">
-               <ImageView fitHeight="45.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@images/calendario.png" />
-               </ImageView>
-               <Button fx:id="exportarRelatorioB" minHeight="40.0" minWidth="240.0" mnemonicParsing="false" prefHeight="40.0" maxWidth="Infinity" HBox.hgrow="ALWAYS" style="-fx-background-color: #1E1E1E;" text="Exportar Relatório Por Data" textFill="#e5a000">
-                  <font>
-                     <Font size="15.0" />
-                  </font>
-               </Button>
-            </HBox>
-            
-            <HBox spacing="10" alignment="CENTER_LEFT">
-               <ImageView fitHeight="56.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@images/calendario-diferenca.png" />
-               </ImageView>
-               <Button fx:id="exportarRelatorioDeDiferencaB" minHeight="40.0" minWidth="240.0" mnemonicParsing="false" prefHeight="40.0" maxWidth="Infinity" HBox.hgrow="ALWAYS" style="-fx-background-color: #1E1E1E;" text="Exportar Relatório De Diferença" textFill="#e5a000">
-                  <font>
-                     <Font size="15.0" />
-                  </font>
-               </Button>
-            </HBox>
-         </VBox>
-         
-         <Separator orientation="VERTICAL" />
-      </VBox>
-   </left>
-   
-   <top>
-      <HBox alignment="CENTER_RIGHT" style="-fx-padding: 20;" BorderPane.alignment="CENTER">
-         <StackPane>
-            <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/sair.png" />
-            </ImageView>
-            <Button fx:id="sairB" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" />
-         </StackPane>
-      </HBox>
-   </top>
-</BorderPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.MenuRelatoriosController">
+
+    <!-- Botão Sair -->
+    <AnchorPane layoutX="775.0" layoutY="-17.0" prefHeight="138.0" prefWidth="150.0">
+        <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="35.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@images/sair.png" />
+        </ImageView>
+        <Button fx:id="sairB" layoutX="30.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" />
+    </AnchorPane>
+
+    <!-- MENU LATERAL (ESQUERDA) -->
+    <AnchorPane prefHeight="700.0" prefWidth="317.0">
+        <Button fx:id="exportarRelatorioB" layoutX="66.0" layoutY="191.0" minHeight="40.0" minWidth="240.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Exportar Relatório
+        " textFill="#e5a000">
+            <opaqueInsets>
+                <Insets />
+            </opaqueInsets>
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Button>
+
+        <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@images/salvar.png" />
+        </ImageView>
+        <Separator layoutX="320.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="3.0" />
+        <Separator layoutY="107.0" prefHeight="7.0" prefWidth="320.0" />
+        <Text fill="#9c27b0" layoutX="98.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Relatórios">
+            <font>
+                <Font name="System Bold" size="24.0" />
+            </font>
+        </Text>
+        <ImageView fitHeight="45.0" fitWidth="32.0" layoutX="14.0" layoutY="195.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@images/calendario.png" />
+        </ImageView>
+    </AnchorPane>
+
+    <!-- CALENDÁRIO (DIREITA) CENTRALIZADO -->
+    <AnchorPane layoutX="350.0" layoutY="80.0" prefWidth="500.0" prefHeight="600.0">
+
+        <!-- TEXTO EXPLICATIVO CENTRALIZADO -->
+        <Text layoutX="50.0" layoutY="20.0" fill="#e5a000" text="Selecione os dias entre o intervalo desejado" wrappingWidth="400" textAlignment="CENTER">
+            <font>
+                <Font name="System Bold" size="16.0"/>
+            </font>
+        </Text>
+
+        <!-- BOTÕES DE NAVEGAÇÃO -->
+        <Button fx:id="btnMesAnterior" layoutX="50.0" layoutY="60.0" text="&lt;" />
+        <Button fx:id="btnMesProximo" layoutX="400.0" layoutY="60.0" text="&gt;" />
+        <Text fx:id="txtMesAno" layoutX="200.0" layoutY="85.0" fill="#e5a000" />
+
+        <!-- GRID DO CALENDÁRIO CENTRALIZADO VERTICALMENTE -->
+        <GridPane fx:id="calendarioGrid" layoutX="50.0" layoutY="120.0" hgap="5" vgap="5" prefWidth="400.0" prefHeight="400.0" />
+    </AnchorPane>
+
+    <opaqueInsets>
+        <Insets bottom="80.0" top="80.0" />
+    </opaqueInsets>
+</AnchorPane>
